--- a/secret recipe.htm
+++ b/secret recipe.htm
@@ -17,8 +17,8 @@
 </ul>
 <h1>Baking instructions</h1>
 <ul>
-<li>Heat oven to 370ºF.</li>
-<li>Stir flour with baking soda and salt; set aside.1</li>
+<li>Heat oven to 375ºF.</li>
+<li>Stir flour with baking soda and salt; set aside.</li>
 <li>In large mixing bowl, beat butter with sugar, and brown sugar at medium speed until creamy and lightened in color.</li>
 <li>Add eggs and vanilla, one at a time. Mix on low speed until incorporated.</li>
 <li>Gradually blend dry mixture into creamed mixture. Stir in nuts and chocolate chips.</li>
