changed last word of recipe

--- a/secret recipe.htm
+++ b/secret recipe.htm
@@ -24,7 +24,9 @@
 <li>Gradually blend dry mixture into creamed mixture. Stir in nuts and chocolate chips.</li>
 <li>Drop by tablespoon onto ungreased cookie sheets.</li>
 <li>Bake for 9 to 11 minutes or until chocolate chip cookies are golden brown.</li>
-<li>Enjoy!</li>
+<li>Enjoy meal!</li>
+<li>Good bye!<li>
+
 </ul>
 
 </body>
